# rust_webassembly

./: .$architecture_diagram.drawio.bkp  .dockerignore  .env.example  .gitignore  ADBLOCK_PROXY_GUIDE.md  AUTO_REFRESH_REFACTORING_SUMMARY.md  COMPLETION_SUMMARY.md  Cargo.toml  Dockerfile  FORM_SEPARATION_FIX.md  INTEGRATION_GUIDE.md  MIGRATION_DOCUMENTATION.md  REFRESH_SYSTEM_SUMMARY.md  TECHNICAL_FUNCTIONAL_SPECIFICATIONS.md  _compile_app.bat  _run.bat  _run.sh  _run_prod.bat  adblock_test_interface.html  architecture_diagram.drawio  build.rs  docker-compose.yml  readme  test_adblock.html  test_integration.html  test_repository.rs
.cargo/: config.toml
android/: ANDROID_CONFIG.md  README.md  build.gradle  build_rust_android.bat  build_rust_android.sh  diagnose_android.bat  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rustwebassembly/app/: MainActivity.java  RustServerService.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
client/: Cargo.toml
client/src/: client_form.rs  client_form_improved.rs  client_periodics.rs  client_request.rs  client_tools.rs  lib.rs  modal.rs
client/src/form/: README.md  errors.rs  examples.rs  field.rs  form_cache.rs  form_config.rs  form_core.rs  form_field.rs  form_handler.rs  form_utilities.rs  form_validation.rs  handler.rs  mod.rs  processor.rs
client/src/refresh/: config.rs  handler.rs  mod.rs  scheduler.rs
client/src/validation/: improved.rs  mod.rs  tests.rs
client/static/: 404.html  android.html  app.css  index.html  test.html  translations.js
client/static/css/: _page_404.css  _page_index.css  android.css  modal.css  table.css
client/static/js/: _page_index.js  android.js  translations.js
core/: Cargo.toml
core/src/: database.rs  database_repository.rs  http_responses.rs  lib.rs  table.rs
core/src/config/: mod.rs
core/src/db_models/: form_data.rs  form_data_simple.rs  mod.rs  user.rs
core/src/errors/: mod.rs
core/src/http_models/: http_responses.rs  mod.rs
core/src/repositories/: _database.rs  _database_postgres.rs  _database_query.rs  _database_sqlite.rs  _init_repository.rs  form_repository.rs  log_repository.rs  migration_repository.rs  mod.rs  tests_repository.rs  user_repository.rs
core/src/repositories/migrations/: migration_create_logs.rs  migration_create_migration.rs  migration_create_users.rs  migration_test.rs  mod.rs
database/migrations/: migration_001_create_posts.rs
server/: .env.example  Cargo.toml
server/src/: extract_form.rs  lib.rs  main.rs  main_new.rs  route.rs  server_lib.rs  ssl_config.rs  web_server.rs
server/src/controllers/: form_controller.rs  index_controller.rs  mod.rs  ping_controller.rs  proxy_controller.rs  weather_controller.rs
server/src/models/: form_response.rs  mod.rs
server/src/routes/: form_route.rs  mod.rs  ping_route.rs
src/: main.rs
