[package]
name = "wasm_fullstack"
version = "0.1.0"
edition = "2021"

[build-dependencies]
walkdir = "2"

[dependencies]
server = { path = "./server" }
actix-web = "4"
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "2"
members = [
    "server",
    "client",
    "core"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time"] }

