[workspace]
resolver = "2"
members = [
    "server",
    "client",
    "core"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time"] }
time = { version = "0.3", features = ["serde"] }