[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "WebAssembly client for the unified front/backend project"
repository = "https://github.com/yourusername/webassembly_unified_frontbackend"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys              = { version = "0.3.77", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Event",
  "Headers",
  "FormData",
  "Blob",
  "File",
  "FileList"
] }
serde-wasm-bindgen   = "0.5"
serde_json           = "1.0"
core                 = { path = "../core" }
serde                = { version = "1.0", features = ["derive"] }
uuid                 = { version = "1.0", features = ["v4", "js"] }

[dependencies.getrandom]
version = "0.2.16"
default-features = false
features = ["js"]
