[package]
name = "core"
version = "0.1.0"
edition = "2021"

[features]
default = ["database"]
database = ["sqlx", "tokio", "time"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
html-escape = "0.2"

# Optional database dependencies
sqlx = { workspace = true, features = ["json"], optional = true }
tokio = { workspace = true, optional = true }
time = { workspace = true, optional = true }
