[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web   = "4"
actix-files = "0.6"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
tokio       = { workspace = true }
sqlx        = { workspace = true }
core        = { path = "../core" }
url         = "2"
dotenv      = "0.15"
uuid        = { version = "1.4", features = ["v4", "serde"] }
env_logger  = "0.10"
