[package]
name = "server"
version = "0.1.0"
edition = "2021"

# Library target for Android builds
[lib]
name = "server"
crate-type = ["cdylib", "rlib"]

# Binary target for standalone execution
[[bin]]
name = "server"
path = "src/main.rs"

[build-dependencies]
walkdir = "2"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_22"] }
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { workspace = true }
sqlx = { workspace = true }
core = { path = "../core" }
url = "2"
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
env_logger = "0.10"
futures = "0.3"
actix-multipart = "0.6"
rustls = "0.22"
rustls-pemfile = "2.0"
rcgen = "0.12"
